[package]
name = "blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
clap = { version = "4.1.6", features = ["derive", "env", "unicode"] }
pulldown-cmark = "0.9.2"
regex = "1"
postgres = "0.19.4"
tokio-postgres = { version = "0.7.7", features = ["with-chrono-0_4", "runtime"]}
postgres-native-tls = "0.5.0"
axum = "0.6.18"
tokio = { version ="1.28.0", features = ["full"] }
minijinja = "0.32.1"
