[package]
name = "finsta"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.3", features = ["multipart", "tracing"] }
clap = { version = "4.4.7", features = [ "derive", "env", "unicode"] }
http = "1.0.0"
hyper = "1.1.0"
minijinja = { version = "1.0.9", features = ["loader"] }
serde = { version = "1.0.190", features = ["derive"] }
thiserror = "1.0.50"
tokio = { version = "1.27.0", features = ["full"] }
tokio-postgres = "0.7.7"
tower-http = { version = "0.5.0", features = ["trace"] }
tracing-subscriber = "0.3.17"
